--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1590,9 +1590,9 @@ section {
   display: flex
 }
 #footer {
-  background: #0c0c0c6e;
+  background: #fff;
   padding: 0 0 30px 0;
-  color: #fff;
+  color: #24283c;
   font-size: 14px;
 }
 
@@ -1737,7 +1737,7 @@ section {
   padding-top: 5px;
   text-align: center;
   font-size: 13px;
-  color: #fff;
+  color: #24283c;
 }
 
 #footer .credits a {
